<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FBFAF5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_options_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:id="@+id/optionSituation"
        style="@style/UpdateOptionItem">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_situation"
            android:textSize="16sp"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionLocation"
        style="@style/UpdateOptionItem">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cập nhật vị trí"
            android:textSize="16sp"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionMembers"
        style="@style/UpdateOptionItem">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_members"
            android:textSize="16sp"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionProgress"
        style="@style/UpdateOptionItem">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_progress"
            android:textSize="16sp"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionSponsor"
        style="@style/UpdateOptionItem">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_sponsor"
            android:textSize="16sp"
            android:padding="8dp" />
    </LinearLayout>

</LinearLayout>